--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kordy/ticketit",
+    "name": "hpakdaman/ticketit",
     "description": "A simple helpdesk tickets system for Laravel 5.1, 5.2, 5.3 and 5.4 which integrates smoothly with Laravel default users and auth system",
     "type": "laravel-package",
     "keywords": ["laravel","helpdesk", "ticket", "support"],
